--- a/src/index.css
+++ b/src/index.css
@@ -95,18 +95,17 @@ input:-webkit-autofill:focus {
 }
 
 .background {
-  @apply absolute  top-0  h-screen w-full bg-[#0A192F] bg-[radial-gradient(#1B263B_1px,#0A192F_1px)] bg-[size:20px_20px] ;
+  @apply bg-[#F8FAFC] bg-[radial-gradient(#c7c9cc_1px,transparent_1px)] dark:bg-[#0a192f] dark:bg-[radial-gradient(#1B263B_1px,#0A192F_1px)] bg-[size:20px_20px];
 }
 
 .flexCenter {
-    @apply flex items-center justify-center;
+  @apply flex items-center justify-center;
 }
 
 .paddingX {
-    @apply px-2  sm:px-4 md:px-6 lg:px-12 xl:px-20 2xl:px-32
+  @apply px-2  sm:px-4 md:px-6 lg:px-12 xl:px-20 2xl:px-32;
 }
 
 .formWrapper {
-    @apply flex flex-col gap-5 w-full max-w-md mx-auto p-3 py-10 sm:p-4 sm:py-10 md:p-6 md:py-12 rounded-lg bg-surface z-10 shadow-md;
+  @apply flex flex-col gap-5 w-full max-w-md mx-auto p-3 py-10 sm:p-4 sm:py-10 md:p-6  rounded-lg bg-surface z-10 shadow-md;
 }
-
