Refactor navigation links and update table components: change paths to include '/dashboard', enhance Table, TableHeader, TableRow, and TablePagination with improved styles and functionality; add PointTable component and integrate pagination; update sidebar item links for better navigation structure.

--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ input:-webkit-autofill:focus {
 }
 
 .sidebarBtn {
-  @apply w-full tracking-tight flex items-center px-3 py-1.5 gap-2 dark:hover:bg-surface hover:bg-subSurface cursor-pointer rounded text-primary text-left sm:text-lg;
+  @apply w-full tracking-tight flex items-center px-3 py-1.5 gap-2 dark:hover:bg-surface hover:bg-primary hover:text-white cursor-pointer rounded text-primary text-left sm:text-lg;
 }
 
 .errorText {
