--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,11 @@ input:-webkit-autofill:focus {
 }
 
 .formWrapper {
-  @apply flex flex-col gap-5 w-full max-w-md mx-auto p-3 py-10 sm:p-4 sm:py-10 md:p-6  rounded-lg bg-surface z-10 shadow-md;
+  @apply flex flex-col gap-5 w-full max-w-md mx-auto p-3 sm:p-4  md:p-6 z-10;
+}
+
+.formContainer {
+  @apply flex flex-col w-full max-w-md  py-6 rounded-lg
 }
 
 .paddingCard {
