--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,9 @@ input:-webkit-autofill:focus {
 .errorText {
   @apply absolute text-sm text-toastErrorText;
 }
+.successText {
+  @apply absolute text-sm text-toastSuccessText;
+}
 
 .background {
   @apply bg-[#F8FAFC] bg-[radial-gradient(#c7c9cc_1px,transparent_1px)] dark:bg-[#0a192f] dark:bg-[radial-gradient(#1B263B_1px,#0A192F_1px)] bg-[size:20px_20px];
