--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,11 @@ input:-webkit-autofill:focus {
 }
 
 .paddingX {
-  @apply px-2  sm:px-3;
+  @apply px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12;
+}
+
+.paddingY {
+  @apply py-4 sm:py-6 md:py-8;
 }
 
 .formWrapper {
