--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,8 @@ input:-webkit-autofill:focus {
   --gradientN-bg: linear-gradient(90deg, #0a192f, #1b263b);
 }
 
-* {
+/* animation */
+button, a, input, select, textarea {
   @apply transition-colors duration-200;
 }
 /* tip tap color */
@@ -144,5 +145,5 @@ input:-webkit-autofill:focus {
 }
 
 .glassBg {
-  @apply bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-50;
+  @apply bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-50;
 }
