feat: implement Account page with skeleton loading state; add useGoBack hook and BackButton component for navigation; enhance PageLayout and SectionLayout styling

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,11 @@ input:-webkit-autofill:focus {
 }
 
 /* animation */
-button, a, input, select, textarea {
+button,
+a,
+input,
+select,
+textarea {
   @apply transition-colors duration-200;
 }
 /* tip tap color */
