feat: add skeleton components for loading states in various pages; enhance form and dashboard layouts; update routes to utilize new skeletons

--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ textarea {
 }
 
 .formWrapper {
-  @apply flex flex-col gap-5 w-full max-w-md mx-auto p-3 sm:p-4  md:p-6 z-10;
+  @apply flex flex-col gap-5 w-full max-w-lg mx-auto p-3 sm:p-4  md:p-6 z-10;
 }
 
 .formContainer {
