--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ input:-webkit-autofill:focus {
 
   /* Accent Colors */
   --primary: #007bff; 
-  --primaryHover: #005bb;
+  --primaryHover: #005bbb;
   --secondary: #ffb300; 
   --disabledText: #9ca3af; 
 
